# SilentDragonLite

./: .gitignore  AUTHORS  DEVELOPING.md  LICENSE  README.md  SilentDragonLite.desktop  application.qrc  build.sh  install.sh  run-after-build.sh  silentdragon-lite.pro
lib/: Cargo.toml
lib/src/: lib.rs
res/: silentdragonlite_ar.qm  silentdragonlite_ar.ts  silentdragonlite_be.qm  silentdragonlite_be.ts  silentdragonlite_de.qm  silentdragonlite_de.ts  silentdragonlite_es.qm  silentdragonlite_es.ts  silentdragonlite_fa.qm  silentdragonlite_fa.ts  silentdragonlite_fr.qm  silentdragonlite_fr.ts  silentdragonlite_hr.qm  silentdragonlite_hr.ts  silentdragonlite_id.qm  silentdragonlite_id.ts  silentdragonlite_it.qm  silentdragonlite_it.ts  silentdragonlite_nl.qm  silentdragonlite_nl.ts  silentdragonlite_pot.ts  silentdragonlite_pt.qm  silentdragonlite_pt.ts  silentdragonlite_ro.qm  silentdragonlite_ro.ts  silentdragonlite_ru.qm  silentdragonlite_ru.ts  silentdragonlite_sr.qm  silentdragonlite_sr.ts  silentdragonlite_template.ts  silentdragonlite_tr.qm  silentdragonlite_tr.ts  silentdragonlite_ud.qm  silentdragonlite_ud.ts  silentdragonlite_zh.qm  silentdragonlite_zh.ts
src/: about.ui  addressbook.cpp  addressbook.h  addresscombo.cpp  addresscombo.h  balancestablemodel.cpp  balancestablemodel.h  camount.cpp  camount.h  chatbubbleme.cpp  chatbubbleme.h  chatbubbleme.ui  chatbubblepartner.cpp  chatbubblepartner.h  chatmodel.cpp  chatmodel.h  connection.cpp  connection.h  contactmodel.cpp  contactmodel.h  controller.cpp  controller.h  datamodel.cpp  datamodel.h  liteinterface.h  (+34 more)
(+46 files in other folders)
